--- a/app/src/main/res/layout/events.xml
+++ b/app/src/main/res/layout/events.xml
@@ -69,8 +69,7 @@
                 android:textSize="15sp" />
 
             <TextView
-                android:visibility="gone"
-                android:id="@+id/volume"
+                android:id="@+id/seek_vol"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
