--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context=".ui.main.MainFragment">
+    tools:context="com.mond.babytory.ui.main.MainFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
